# open-friendly-net-detection-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
debian/: changelog  control  copyright  dirs  install  open-friendly-net-detection-client.maintscript  postinst  postrm  prerm  py3dist-overrides  rules
packaging/: config.yaml  dhclient-fnd.conf  fnd-client.service  open-friendly-net-detection-client.service
scripts/: 50-ofnd-nm  dhclient-exit-hook  dhclient-hook.sh
src/fnd_client/: service.py
src/open_friendly_net_detection_client/: service.py
