[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-friendly-net-detection-client"
version = "0.2.8"
description = "Friendly Network Detection client service"
authors = [{name = "Apfelwurm", email = "Alexander@volzit.de"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "PyNaCl"
]

[project.scripts]
open-friendly-net-detection-client = "open_friendly_net_detection_client.service:main"
